--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,23 @@
-pandas>=1.3.0
-numpy>=1.21.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-scikit-learn>=1.0.0
-statsmodels>=0.13.0
-scipy>=1.7.0
-pycaret>=3.0.0
+# Core Data Science Libraries
+pandas>=2.3.0
+numpy>=2.0.0
+scipy>=1.16.0
+
+# Visualization
+matplotlib>=3.10.0
+seaborn>=0.13.0
+
+# Machine Learning & Statistical Modeling
+scikit-learn>=1.7.0
+statsmodels>=0.14.0
+
+# Interactive Notebooks
 jupyter>=1.0.0
-ipython>=7.0.0
+ipython>=8.0.0
+
+# Optional: AutoML (install with: pip install pycaret)
+# Note: pycaret requires pandas<2.2, which may conflict with newer versions
+# For this project, core libraries above are sufficient
+
+# Development Tools
+ipykernel>=6.0.0
